--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/bootstrap.min.css"/>
+        <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css"/>
     </head>
     <body>
         <!--header of the website-->
@@ -10,11 +11,21 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="jumbotron text-center">
-                        <h1>Hello, World!</h1>
+                        <h1>Music <i class="fa fa-headphones" aria-hidden="true"></i></h1>
                         <hr/>
-                        <h6>Welcome to my Webpage</h6>
+                        <h4>And Why its so Important</h4>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <!--middle part of the website-->
+        <div class="row">
+            <div class="col-md-6">
+                <img class="img-responsive" src="../images/music_r1se.svg" title="MUSIC!!!" alt="listening to music"/>
+            </div>
+            <div class="col-md-6 text-center">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae itaque quaerat illo distinctio eligendi maiores quos eius atque, molestias, alias quas provident totam voluptatibus quo excepturi minima quae tempore pariatur.</p>
             </div>
         </div>
 
