fixed the layout problem, but not the img-responsive problem

--- a/html/index.html
+++ b/html/index.html
@@ -17,16 +17,30 @@
                     </div>
                 </div>
             </div>
-        </div>
 
         <!--middle part of the website-->
-        <div class="row">
-            <div class="col-md-6">
-                <img class="img-responsive" src="../images/music_r1se.svg" title="MUSIC!!!" alt="listening to music"/>
+            <div class="row">
+                <div class="col-md-6">
+                    <img style="width: 100%" class="img-responsive" src="../images/music_r1se.svg" title="MUSIC!!!" alt="listening to music"/>
+                </div>
+                <div class="col-md-6 text-center">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae itaque quaerat illo distinctio eligendi maiores quos eius atque, molestias, alias quas provident totam voluptatibus quo excepturi minima quae tempore pariatur.</p>
+                </div>
             </div>
-            <div class="col-md-6 text-center">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae itaque quaerat illo distinctio eligendi maiores quos eius atque, molestias, alias quas provident totam voluptatibus quo excepturi minima quae tempore pariatur.</p>
+
+            <div class="row">
+                <div class="col-md-6">
+
+                </div>
+                <div class="col-md-6">
+
+                </div>
             </div>
+
+        <!--last part of the website, the footer-->
+
+
+
         </div>
 
         <script src="../scripts/jquery-3.3.1.min.js"></script>
