finished the middle section of webpage, added internal stylesheet

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/bootstrap.min.css"/>
         <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css"/>
+
+        <style>
+            .foo {
+                padding: 150px 75px;
+            }
+
+            .bar {
+                width: 100%;
+            }
+
+            /* .col-md-6 {
+                border: 2px solid black;
+            } */
+
+        </style>
+
     </head>
     <body>
         <!--header of the website-->
@@ -21,19 +37,28 @@
         <!--middle part of the website-->
             <div class="row">
                 <div class="col-md-6">
-                    <img style="width: 100%" class="img-responsive" src="../images/music_r1se.svg" title="MUSIC!!!" alt="listening to music"/>
+                    <img class="img-responsive bar" src="../images/music_r1se.svg" title="MUSIC!!!" alt="listening to music"/>
                 </div>
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 text-center foo">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae itaque quaerat illo distinctio eligendi maiores quos eius atque, molestias, alias quas provident totam voluptatibus quo excepturi minima quae tempore pariatur.</p>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-6">
-
+                <div class="col-md-6 foo">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sequi quasi aut, eveniet hic enim labore aspernatur exercitationem placeat ad, adipisci facilis. Soluta libero eius harum nemo, placeat perferendis voluptatem.</p>
                 </div>
                 <div class="col-md-6">
+                    <img class="bar" src="../images/walk_in_the_city_1ma6.svg" title="music" alt="more music"/>
+                </div>
+            </div>
 
+            <div class="row">
+                <div class="col-md-6">
+                    <img class="bar" src="../images/compose_music_ovo2.svg" title="more music" alt="music"/>
+                </div>
+                <div class="col-md-6 foo">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, quo harum ea magnam molestiae enim nobis praesentium? Recusandae ipsa accusamus aliquid eveniet sunt blanditiis eligendi amet? Nihil aperiam ipsa placeat.</p>
                 </div>
             </div>
 
