fixed the imgs responsive with the img-fluid class

--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,8 @@
 
         <style>
             .foo {
-                padding: 150px 75px;
-            }
-
-            .bar {
-                width: 100%;
+                /* padding: 150px 75px; */
+                padding: 10em 1em
             }
 
             /* .col-md-6 {
@@ -24,20 +21,18 @@
     <body>
         <!--header of the website-->
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="jumbotron text-center">
-                        <h1>Music <i class="fa fa-headphones" aria-hidden="true"></i></h1>
-                        <hr/>
-                        <h4>And Why its so Important</h4>
-                    </div>
+            <div class="col-md-12">
+                <div class="jumbotron text-center">
+                    <h1>Music <i class="fa fa-headphones" aria-hidden="true"></i></h1>
+                    <hr/>
+                    <h4>And Why its so Important</h4>
                 </div>
             </div>
 
         <!--middle part of the website-->
             <div class="row">
                 <div class="col-md-6">
-                    <img class="img-responsive bar" src="../images/music_r1se.svg" title="MUSIC!!!" alt="listening to music"/>
+                    <img class="img-fluid" src="../images/music_r1se.svg" title="MUSIC!!!" alt="listening to music"/>
                 </div>
                 <div class="col-md-6 text-center foo">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae itaque quaerat illo distinctio eligendi maiores quos eius atque, molestias, alias quas provident totam voluptatibus quo excepturi minima quae tempore pariatur.</p>
@@ -49,13 +44,13 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sequi quasi aut, eveniet hic enim labore aspernatur exercitationem placeat ad, adipisci facilis. Soluta libero eius harum nemo, placeat perferendis voluptatem.</p>
                 </div>
                 <div class="col-md-6">
-                    <img class="bar" src="../images/walk_in_the_city_1ma6.svg" title="music" alt="more music"/>
+                    <img class="img-fluid" src="../images/walk_in_the_city_1ma6.svg" title="music" alt="more music"/>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-6">
-                    <img class="bar" src="../images/compose_music_ovo2.svg" title="more music" alt="music"/>
+                    <img class="img-fluid" src="../images/compose_music_ovo2.svg" title="more music" alt="music"/>
                 </div>
                 <div class="col-md-6 foo">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, quo harum ea magnam molestiae enim nobis praesentium? Recusandae ipsa accusamus aliquid eveniet sunt blanditiis eligendi amet? Nihil aperiam ipsa placeat.</p>
