fixed the issue with the icons by adding Font Awesome's CDN; I also added a thumbs-up icon as well

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="../styles/bootstrap.min.css"/>
         <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css"/>
 
+        <!--Font Awesome's CDN-->
+        <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+
         <style>
             .foo {
                 /* padding: 150px 75px; */
@@ -23,9 +26,9 @@
         <div class="container">
             <div class="col-md-12">
                 <div class="jumbotron text-center">
-                    <h1>Music <i class="fa fa-headphones" aria-hidden="true"></i></h1>
+                    <h1 class="display-1">Music <i class="fas fa-headphones" aria-hidden="true"></i></h1> <!--do I really need the aria-hidden attribute?-->
                     <hr/>
-                    <h4>And Why its so Important</h4>
+                    <h2>And Why its so Important <i class="far fa-thumbs-up"></i></h2>
                 </div>
             </div>
 
