added facebook, amazon, twitter & instagram icons to the footer

--- a/html/index.html
+++ b/html/index.html
@@ -61,6 +61,17 @@
             </div>
 
         <!--last part of the website, the footer-->
+        <div class="row text-center"> <!--text-center class is not working! Why!?-->
+            <p>You can find me at these sites if you wish to discuss more about music:</p>
+        </div>
+        <div class="text-center">
+            <i class="fab fa-facebook fa-3x"></i>
+            <i class="fab fa-amazon fa-3x"></i>
+            <i class="fab fa-twitter fa-3x"></i>
+            <i class="fab fa-instagram fa-3x"></i>
+        </div>
+        <div class="row" style="margin-bottom: 50px"></div>
+
 
 
 
