--- a/html/index.html
+++ b/html/index.html
@@ -60,22 +60,28 @@
                 </div>
             </div>
 
+        </div>
         <!--last part of the website, the footer-->
-        <div class="row text-center"> <!--text-center class is not working! Why!?-->
-            <p>You can find me at these sites if you wish to discuss more about music:</p>
+        <div class="container-fluid">
+            <div class="row" style="background-color: rgb(139, 235, 222)">
+                <div class="col-md-6">
+                    <p class="display-4 text-center">You can find me at these sites if you wish to discuss more about music:</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="text-center">
+                        <p><i class="fab fa-facebook fa-3x"></i> Facebook</p>
+                        <i class="fab fa-amazon fa-3x"></i><p>Amazon</p>
+                        <p><i class="fab fa-twitter fa-3x"></i> Twitter</p>
+                        <i class="fab fa-instagram fa-3x"></i><p>Instagram</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 50px"></div>
         </div>
-        <div class="text-center">
-            <i class="fab fa-facebook fa-3x"></i>
-            <i class="fab fa-amazon fa-3x"></i>
-            <i class="fab fa-twitter fa-3x"></i>
-            <i class="fab fa-instagram fa-3x"></i>
-        </div>
-        <div class="row" style="margin-bottom: 50px"></div>
 
 
 
 
-        </div>
 
         <script src="../scripts/jquery-3.3.1.min.js"></script>
         <script src="../scripts/bootstrap.min.js"></script>
