formatted the icons to appear as a grid in the right side of the footer, still needs work

--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,10 @@
                 border: 2px solid black;
             } */
 
+            /* .row {
+                border: 1px solid black;
+            } */
+
         </style>
 
     </head>
@@ -68,11 +72,21 @@
                     <p class="display-4 text-center">You can find me at these sites if you wish to discuss more about music:</p>
                 </div>
                 <div class="col-md-6">
-                    <div class="text-center">
-                        <p><i class="fab fa-facebook fa-3x"></i> Facebook</p>
-                        <i class="fab fa-amazon fa-3x"></i><p>Amazon</p>
-                        <p><i class="fab fa-twitter fa-3x"></i> Twitter</p>
-                        <i class="fab fa-instagram fa-3x"></i><p>Instagram</p>
+                    <div class="row">
+                        <div class="col-md-6 text-center">
+                            <p><i class="fab fa-facebook fa-3x"></i> Facebook</p>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <i class="fab fa-amazon fa-3x"></i><p>Amazon</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 text-center">
+                            <p><i class="fab fa-twitter fa-3x"></i> Twitter</p>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <i class="fab fa-instagram fa-3x"></i><p>Instagram</p>
+                        </div>
                     </div>
                 </div>
             </div>
