added a collapsible navigation bar

--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,32 @@
 
     </head>
     <body>
+        <!--navigation bar-->
+        <div class="container-fluid" style="margin-bottom: 70px">
+            <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
+                <a href="#" class="navbar-brand">Website About Music</a>
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="navbar-item">
+                            <a href="#" class="nav-link">Homepage</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a href="#" class="nav-link">Blog</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a href="#" class="nav-link">About Me</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a href="#" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
         <!--header of the website-->
         <div class="container">
             <div class="col-md-12">
