added padding to the icons in the footer

--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,10 @@
                 border: 1px solid black;
             } */
 
+            .middle {
+                padding: 50px 100px;
+            }
+
         </style>
 
     </head>
@@ -99,18 +103,18 @@
                 </div>
                 <div class="col-md-6">
                     <div class="row">
-                        <div class="col-md-6 text-center">
+                        <div class="col-md-6 text-center middle">
                             <p><i class="fab fa-facebook fa-3x"></i> Facebook</p>
                         </div>
-                        <div class="col-md-6 text-center">
+                        <div class="col-md-6 text-center middle">
                             <i class="fab fa-amazon fa-3x"></i><p>Amazon</p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 text-center">
+                        <div class="col-md-6 text-center middle">
                             <p><i class="fab fa-twitter fa-3x"></i> Twitter</p>
                         </div>
-                        <div class="col-md-6 text-center">
+                        <div class="col-md-6 text-center middle">
                             <i class="fab fa-instagram fa-3x"></i><p>Instagram</p>
                         </div>
                     </div>
@@ -118,10 +122,6 @@
             </div>
             <div class="row" style="margin-bottom: 50px"></div>
         </div>
-
-
-
-
 
         <script src="../scripts/jquery-3.3.1.min.js"></script>
         <script src="../scripts/bootstrap.min.js"></script>
