added a README.md file, reduced the amount of text in the footer

--- a/html/index.html
+++ b/html/index.html
@@ -97,9 +97,9 @@
         </div>
         <!--last part of the website, the footer-->
         <div class="container-fluid">
-            <div class="row" style="background-color: rgb(157, 192, 187)">
+            <div class="row" style="background-color: rgb(170, 230, 222)">
                 <div class="col-md-6">
-                    <p class="display-4 text-center">You can find me at these sites if you wish to discuss more about music:</p>
+                    <p class="display-4 text-center" style="padding: 110px">Find Me Here:</p>
                 </div>
                 <div class="col-md-6">
                     <div class="row">
